<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper_blue_clean"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="zesters.sistemaderegistrofenal.MainFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical">

        <TextView
            android:id="@+id/texto1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/title_main_welcome"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/black"
            android:textSize="25sp"
            android:elegantTextHeight="true" />

        <TextView
            android:id="@+id/texto2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/texto2"
            android:textAlignment="center"
            android:textAppearance="?android:attr/textAppearanceMediumInverse"
            android:textColor="@color/grey_secondary_text"
            android:textSize="25sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/linearLayout"
            android:layout_alignStart="@+id/linearLayout"
            android:layout_below="@+id/linearLayout"
            android:orientation="vertical">

            <Button
                android:id="@+id/boton1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boton2"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_add_register"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boton3"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_search_customer"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boton4"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_search_book"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boton5"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_delete_customer"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boton6"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_book_list"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/boton7"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_editorial_list"
                android:textSize="17dp" />

            <Button
                android:id="@+id/boton7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:backgroundTint="@color/cyan_600"
                android:text="@string/title_customize_register"
                android:textSize="17dp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
